--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
+  "homepage": "https://jvandag.github.io/jvandag.github.io",
   "scripts": {
     "start": "webpack serve --open",
-    "build": "cross-env SOURCEMAPS=true NODE_ENV=development webpack"
+    "build": "cross-env SOURCEMAPS=true NODE_ENV=development webpack",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +20,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.1.1",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
